Fix issue #14000: Correct blog like button cut-off on Safari
Adjust margin for  icons in  to prevent cut-off on Safari browsers.

--- a/ui/site/css/ublog/_post.scss
+++ b/ui/site/css/ublog/_post.scss
@@ -64,6 +64,7 @@
     font-weight: bold;
     cursor: pointer;
     &::before {
+      margin-#{$start-direction}: 0.4em;
       margin-#{$end-direction}: 0.4em;
       content: $licon-HeartOutline;
     }
